# hackernews-reader

./: AGENTS.md  Makefile  README.md  pyproject.toml  pytest.ini
skills/hackernews/: SKILL.md
src/hn/: __init__.py  algolia.py  cli.py  client.py  formatters.py  models.py  text.py
tests/: test_algolia.py  test_client.py  test_formatters.py  test_models.py
