[project]
name = "hackernews-reader"
version = "0.1.0"
description = "Hacker News CLI reader with time-based search via Algolia"
readme = "README.md"
authors = [
    { name = "tizee", email = "33030965+tizee@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.scripts]
hn = "hn.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hn"]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
    "respx>=0.22.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    ".venv",
    "dist",
    "build",
    "__pypackages__",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "D",
    "UP",
    "B",
    "C4",
    "SIM",
    "PIE",
    "PERF",
    "PGH",
    "T10",
    "T20",
]
ignore = [
    "E501",
    "D105",
    "D107",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
length-sort = true
length-sort-straight = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "B"]
"src/hn/cli.py" = ["T20"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "build", "dist"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportImportCycles = false
reportPrivateUsage = false
# respx uses bare List/Dict (no type params) in Route.respond() signature,
# causing every .respond() call to trigger this. No upstream fix available.
reportUnknownMemberType = "warning"
